# Projetos-Prog

./: ProjetoRPG.rar  flask_sqlAlchemySeparado_17_06.rar
Flask_SqlAlchemy301/: app.py
Flask_SqlAlchemy301/instance/: app.db
ProjetoTrimestral/: pyproject.toml
ProjetoTrimestral/projetotrimestral/: app.py  baka.py
ProjetoTrimestral/projetotrimestral/static/css/: style.css
ProjetoTrimestral/projetotrimestral/static/js/: script.js
ProjetoTrimestral/projetotrimestral/template/: index.html
ProjetoTrimestral/template/: index.html
Trabalho301Info/: app.py  pyproject.toml
Trabalho301Info/templates/: index.html  script.js  sobre.html  style.css
flask_sqlAlchemy301 (2)/: app.py
flask_sqlAlchemy301 (2)/templates/: busca_tarefas.html
flask_sqlAlchemy301/flask_sqlAlchemy301/: app.py  pyproject.toml
flask_sqlAlchemy301/flask_sqlAlchemy301/instance/: app.db
flask_sqlAlchemy301/flask_sqlAlchemy301/templates/: busca_tarefas.html  criar_tarefa.html  editar_tarefa.html  login.html
flask_sqlAlchemy301/instance/: app.db
rpg-game/: pyproject.toml
rpg-game/src/rpg_game/: gerenciador_jogo.py  guerreiro.py  mago.py  personagem.py
site-jinja-301/site-jinja/src/site_jinja/: app.py
site-jinja-301/site-jinja/src/site_jinja/templates/: base.html  cozinha.html
site-jinja/src/site_jinja/: app.py
site-jinja/src/site_jinja/templates/: balcao.html  base.html  contato.html  cozinha.html  index.html
trabaio/: app.py
trabaio/instance/: app.db
trabaio/static/css/: base.css
trabaio/templates/: base.html  busca_tarefas.html  login.html  registrar_desenvolvedor.html
(+1 files in other folders)
