[project]
name = "rpg-game"
version = "0.1.0"
description = "Jogo implementado em sala de aula"
authors = [
    {name = "Ríad Mattos Nassiffe",email = "riad.nassiffe@ifc.edu.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "rpg_game", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
